--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gst-fsl-plugins (3.0.7-2atrust3) t66; urgency=low
+
+  * Update changelog for arm-8.02_PREG
+
+ -- Wally Yeh (Wally) <wally.yeh@a-trust.com.tw>  Wed, 28 May 2014 11:00:14 +0000
+
 gst-fsl-plugins (3.0.7-2atrust2) t66; urgency=low
 
   * v4lsink: Fix thread race condition issue
